--- a/packages/block/package.json
+++ b/packages/block/package.json
@@ -24,6 +24,10 @@
   "license": "ISC",
   "packageManager": "pnpm@10.15.0",
   "devDependencies": {
+    "@types/lz-string": "^1.5.0",
     "vitest": "^4.0.6"
+  },
+  "dependencies": {
+    "lz-string": "^1.5.0"
   }
 }
